--- a/src/app/modules/create-task/create-task.component.html
+++ b/src/app/modules/create-task/create-task.component.html
@@ -1,3 +1,3 @@
-<main class="h-dvh bg-cyan-800 text-white p-20">
+<main class="min-h-dvh bg-cyan-800 text-white p-20">
   <app-reactive-form></app-reactive-form>
 </main>
