--- a/src/app/modules/create-task/components/reactive-form/reactive-form.component.html
+++ b/src/app/modules/create-task/components/reactive-form/reactive-form.component.html
@@ -49,7 +49,7 @@
         <custom-input
           [label]="'Age'"
           [control]="$any(associatedUser.get('age'))"
-          [type]="'text'"
+          [type]="'number'"
           [placeHolder]="'29'"
           [errorMessage]="'Age is required'"
         />
@@ -78,7 +78,16 @@
 
         }
       </article>
-      }
+      @if(getAssociatedUsersControl().controls.length > 1){
+      <button
+        class="px-2 py-1 min-w-6 rounded-lg bg-red-500 flex items-center justify-center gap-1 mb-6 w-full"
+        type="button"
+        (click)="onDeleteUser(indx)"
+      >
+        <i class="fa-solid fa-user-plus text-xs"></i>
+        Delete user
+      </button>
+      } }
     </section>
 
     <button
