--- a/src/app/modules/create-task/components/reactive-form/reactive-form.component.html
+++ b/src/app/modules/create-task/components/reactive-form/reactive-form.component.html
@@ -56,6 +56,7 @@
 
         <button
           class="bg-sky-600 px-2 py-1 min-w-6 rounded-lg mt-4 mb-2 w-full text-center"
+          (click)="onAddSkill(indx)"
         >
           <i class="fa-solid fa-plus"></i> Add Skill
         </button>
@@ -70,15 +71,19 @@
             [placeHolder]="'Excelente dev Frontend'"
             [errorMessage]="'skill is required'"
           />
-
-          <button class="bg-red-500 px-2 py-1 min-w-6 rounded-lg h-full">
+          @if(getSkillsOfAssociatedUser(indx).length > 1 ){
+          <button
+            class="bg-red-500 px-2 py-1 min-w-6 rounded-lg h-full"
+            (click)="onDeleteSkill(indx, jIndx)"
+          >
             <i class="fa-solid fa-trash-can"></i>
           </button>
+          }
         </div>
 
         }
       </article>
-      @if(getAssociatedUsersControl().controls.length > 1){
+      @if(getAssociatedUsersControl().length > 1){
       <button
         class="px-2 py-1 min-w-6 rounded-lg bg-red-500 flex items-center justify-center gap-1 mb-6 w-full"
         type="button"
