update: type button

--- a/src/app/modules/update-task/components/reactive-form/reactive-form.component.html
+++ b/src/app/modules/update-task/components/reactive-form/reactive-form.component.html
@@ -57,6 +57,7 @@
         <button
           class="bg-sky-600 px-2 py-1 min-w-6 rounded-lg mt-4 mb-2 w-full text-center"
           (click)="onAddSkill(indx)"
+          type="button"
         >
           <i class="fa-solid fa-plus"></i> Add Skill
         </button>
@@ -76,6 +77,7 @@
           <button
             class="bg-red-500 px-2 py-1 min-w-6 rounded-lg h-full"
             (click)="onDeleteSkill(indx, jIndx)"
+            type="button"
           >
             <i class="fa-solid fa-trash-can"></i>
           </button>
